# pydentic_new

./: .dockerignore  .gitignore  Dockerfile  final_report.md  main.py  pyproject.toml  requirements.txt
agents/: app_pdf_utils.py  crewai_multiple_agents.py
app_schema/: data_validation.py
frontend/: fastapi_streamlit_crewai_agent.py  streamlit_crewai_agent.py
src/: final_report.md
src/agents/: app_pdf_utils.py  crewai_multiple_agents.py
src/app_schema/: data_validation.py
src/frontend/: fastapi_crewai_agent.py  googlesheet_crewai_agent.py  streamlit_crewai_agent.py
